<resources>
    <string name="app_name">SoundCloundMusic_MVP</string>
    <string name="app_name_splash">Sound Clound Music</string>
    <string name="title_home">Home</string>
    <string name="title_local_music">Local Music</string>
    <string name="title_playlist">Playlist</string>
    <string name="title_search">Sreach</string>
    <string name="search_message">Type here to search</string>
    <string name="no_internet">internet not avaiable</string>
    <string name="genres">Genres</string>
    <string name="msg_listen_all">Listen all</string>
    <string name="msg_00_00">00:00</string>
    <string name="msg_artist">Artist</string>
    <string name="msg_1k">1K</string>
    <string name="loading">Loading…</string>
    <string name="no_item_more">No item more</string>
    <string name="track_copyrighted">Track Copyrighted</string>
    <string name="action_download">Download This Track</string>
    <string name="msg_cant_download">Can\'t download</string>
    <string name="msg_downloading">Dowloading…</string>
    <string name="lyrics">Lyrics</string>
    <string name="txt_number_1">1</string>
    <string name="sample">04:52 | Linh</string>
    <string name="msg_permission_denied">permission denied</string>
    <string name="msg_1_playlists_in_total">%d play lists in total</string>
    <string name="msg_add_playlist">Add play list</string>
    <string name="number_tracks">tracks</string>
    <string name="play_now">Play now</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="play_list_dialog_hint">Play list name</string>
    <string name="msg_cancel">Cancel</string>
    <string name="msg_Confirm">Confirm</string>
    <string name="play_list.create">Create play list</string>
    <string name="play_list.edit">Edit play list</string>
    <string name="favorite">Favorite</string>
    <string name="playlist_name_cannot_empty">Play list name canot empty</string>
    <string name="playlist_is_exists">Play list is exists</string>
    <string name="playlist_name_is_exists">Play list name is exists</string>

    <string-array name="music_genres">
        <item>Pop</item>
        <item>All music</item>
        <item>All audio</item>
        <item>Alternative Rock</item>
        <item>Ambient</item>
        <item>Classical</item>
        <item>Country</item>
    </string-array>
</resources>
