<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_64">

    <TextView
        android:id="@+id/text_view_index"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:gravity="center"
        android:minWidth="@dimen/dp_24"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        tools:text="@string/txt_number_1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/dp_64"
        android:layout_toLeftOf="@+id/layout_action"
        android:layout_toStartOf="@+id/layout_action"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_14"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/text_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_12"
            tools:text="@string/sample" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/layout_action"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16">

        <ImageButton
            android:id="@+id/img_button_options"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="center"
            android:src="@drawable/ic_option_white" />
    </FrameLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/dp_2"
        android:background="@android:color/white" />
</RelativeLayout>