<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dp_4">

    <ImageButton
        android:background="@null"
        android:id="@+id/img_button_play"
        android:layout_width="@dimen/dp_32"
        android:layout_height="@dimen/dp_32"
        android:layout_marginLeft="@dimen/dp_8"
        android:src="@drawable/ic_play_toogle"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/text_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_4"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_14"
        app:layout_constraintLeft_toRightOf="@id/img_button_play"
        app:layout_constraintRight_toLeftOf="@id/text_duration"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="6dp" />

    <TextView
        android:id="@+id/text_artist"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_32"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/msg_artist"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/img_button_play"
        app:layout_constraintRight_toLeftOf="@id/img_button_options"
        app:layout_constraintTop_toBottomOf="@id/text_title" />

    <TextView
        android:id="@+id/text_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_4"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_4"
        android:text="@string/msg_00_00"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/img_button_options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/img_button_options"
        android:layout_width="@dimen/dp_32"
        android:layout_height="@dimen/dp_32"
        android:background="@null"
        android:scaleType="fitXY"
        android:src="@drawable/ic_option_white"
        app:layout_constraintBottom_toTopOf="@id/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_duration" />
    />

    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_2"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_button_options" />
</android.support.constraint.ConstraintLayout>