<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dp_1">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_song"
            android:layout_width="@dimen/dp_64"
            android:layout_height="@dimen/dp_64"
            android:layout_marginLeft="@dimen/dp_8"
            android:background="@drawable/ic_app_2"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/msg_00_00"
            android:textColor="@color/sc.theme.textColorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_4"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/app_name"
            android:textColor="@color/sc.theme.textColorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/text_artist"
            app:layout_constraintEnd_toStartOf="@+id/text_duration"
            app:layout_constraintStart_toEndOf="@+id/image_song"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_artist"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginRight="8dp"
            android:layout_marginTop="@dimen/dp_4"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/msg_artist"
            android:textColor="@color/sc.theme.textColorPrimary"
            app:layout_constraintBottom_toTopOf="@id/image_ic_play"
            app:layout_constraintEnd_toStartOf="@+id/img_button_options"
            app:layout_constraintStart_toEndOf="@+id/image_song"
            app:layout_constraintTop_toBottomOf="@id/text_title" />

        <ImageView
            android:id="@+id/image_ic_play"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_marginLeft="@dimen/dp_8"
            android:src="@drawable/ic_play_arrow"
            android:layout_marginBottom="@dimen/dp_4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_song"
            app:layout_constraintTop_toBottomOf="@+id/text_artist" />

        <TextView
            android:id="@+id/text_number_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_4"
            android:text="@string/msg_1k"
            android:textColor="@color/sc.theme.textColorPrimary"
            app:layout_constraintBottom_toBottomOf="@id/image_ic_play"
            app:layout_constraintStart_toEndOf="@+id/image_ic_play"
            app:layout_constraintTop_toTopOf="@id/image_ic_play" />

        <ImageView
            android:id="@+id/image_ic_favorite"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_marginLeft="@dimen/dp_90"
            android:src="@drawable/ic_favorite_grey"
            app:layout_constraintBottom_toBottomOf="@id/image_ic_play"
            app:layout_constraintStart_toEndOf="@+id/image_ic_play"
            app:layout_constraintTop_toTopOf="@id/image_ic_play" />

        <TextView
            android:id="@+id/text_number_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_4"
            android:text="@string/msg_1k"
            android:textColor="@color/sc.theme.textColorPrimary"
            app:layout_constraintBottom_toBottomOf="@id/image_ic_play"
            app:layout_constraintStart_toEndOf="@id/image_ic_favorite"
            app:layout_constraintTop_toTopOf="@id/image_ic_play" />

        <ImageButton
            android:id="@+id/img_button_options"
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/ic_option"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_duration" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
