<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?actionBarSize"
        app:cardCornerRadius="@dimen/dp_0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/line_0"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_marginRight="@dimen/dp_8"
                android:background="@color/sc.theme.colorPrimaryDark"
                app:layout_constraintBottom_toTopOf="@id/msg_text_genres"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/msg_text_genres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_2"
                android:text="@string/genres"
                android:textColor="@color/sc.theme.textColorPrimary"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line_0" />

            <Spinner
                android:id="@+id/spinner_genres"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_2"
                android:layout_marginEnd="@dimen/dp_8"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_2"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/line_straight"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/msg_text_genres" />

            <View
                android:id="@+id/line_straight"
                android:layout_width="@dimen/dp_1"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_8"
                android:background="@color/sc.theme.colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line_0" />

            <ImageView
                android:id="@+id/action_image_play_list"
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_marginBottom="@dimen/dp_8"
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_8"
                android:src="@drawable/ic_play"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/text_listen_all"
                app:layout_constraintTop_toBottomOf="@id/line_0" />

            <TextView
                android:id="@+id/text_listen_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_8"
                android:text="@string/msg_listen_all"
                android:textColor="@color/sc.theme.textColorPrimary"
                app:layout_constraintBottom_toBottomOf="@id/action_image_play_list"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/action_image_play_list" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_view">

        <TextView
            android:id="@+id/text_no_internet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_internet"
            android:textSize="@dimen/sp_16"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.RecyclerView
            android:layout_marginTop="@dimen/dp_1"
            android:id="@+id/recycler_view"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
</LinearLayout>